[package]
name = "zwift_watcher"
version = "0.1.0"
authors = ["Maksim Sch <maks777s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zwift_capture = { git = "https://github.com/maxz000/zwift_capture", branch = "main" }
